--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "web.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./web.js",
+    "start": "nodemon --exec babel-node ./src/main.js",
     "build": "babel ./src/main.js -o web.js"
   },
   "author": "",
